# mediaCenter

./: .gitignore  ChangeLog  Makefile  Makefile.am  Makefile.in  README  TODO  basePlugin.h  bootstrap  config.cpp  config.h  configure  configure.ac  displayPlugin.cpp  mediaCenter.cpp  mediaCenter_imon_udp.cpp  mediaCenter_lirc.cpp  mediaCenter_menu.cpp  mediaCenter_old.cpp  mediaCenter_output.h  mediaCenter_output_tcp.cpp  mediaCenter_output_udp.cpp  menuPlugin.cpp  outputPlugin.h  recordPlugin.h  remotePlugin.cpp  tvcontrol.cpp  utils.h  xineRemote.cpp  xineRemote.h
etc/: Makefile.am  Makefile.in
include/: basePlugin.h  config.h  defines.h.in  displayPlugin.h  fileutils.h  hsm.h  mediaCenter_events.h  mediaCenter_main.h  mediaCenter_mplayer.h  mediaCenter_output.h  mediaCenter_xine.h  mediaCenter_xmms.h  menuPlugin.h  monitorPlugin.h  mplayerRemote.h  outputPlugin.h  recorderPlugin.h  remotePlugin.h  tvcontrol.h  utils.h  xineRemote.h
src/: Makefile.am  Makefile.in  TVMain.cpp  basePlugin.cpp  config.cpp  displayPlugin.cpp  fileutils.cpp  hsm.cpp  mediaCenter.cpp  mediaCenter_cdMonitor.cpp  mediaCenter_dummy.cpp  mediaCenter_glmenu.cpp  mediaCenter_imon.cpp  mediaCenter_imon_tcp.cpp  mediaCenter_imon_udp.cpp  mediaCenter_lirc.cpp  mediaCenter_main.cpp  mediaCenter_mplayer.cpp  mediaCenter_output.cpp  mediaCenter_xine.cpp  mediaCenter_xmms.cpp  menuPlugin.cpp  monitorPlugin.cpp  mplayerRemote.cpp  outputPlugin.cpp  recordPlugin.cpp  recorderPlugin.cpp  remotePlugin.cpp  tvcontrol.cpp  xineRemote.cpp
