SUBDIRS=src
AUTOMAKE_OPTIONS=foreign no-dist-gzip dist-bzip2
EXTRA_DIST=include/config.h include/basePlugin.h include/displayPlugin.h include/menuPlugin.h include/outputPlugin.h include/remotePlugin.h include/recorderPlugin.h include/mediaCenter_output.h include/tvcontrol.h include/utils.h include/xineRemote.h include/mplayerRemote.h bootstrap
