SUBDIRS=src etc
AUTOMAKE_OPTIONS = foreign no-dist-gzip dist-bzip2
EXTRA_DIST = \
		include/basePlugin.h \
		include/config.h \
		include/displayPlugin.h \
		include/hsm.h \
		include/mediaCenter_events.h \
		include/mediaCenter_main.h \
		include/mediaCenter_mplayer.h \
		include/mediaCenter_output.h \
		include/mediaCenter_xine.h \
		include/mediaCenter_xmms.h \
		include/menuPlugin.h \
		include/mplayerRemote.h \
		include/outputPlugin.h \
		include/recorderPlugin.h \
		include/remotePlugin.h \
		include/tvcontrol.h \
		include/utils.h \
		include/xineRemote.h \
		bootstrap
